--- a/package.json
+++ b/package.json
@@ -1,9 +1,16 @@
 {
   "name": "bc-uploader",
   "version": "0.1.0",
+  "main": "main.js",
   "private": true,
   "dependencies": {
+    "@sindresorhus/slugify": "^0.9.1",
+    "aws-sdk": "^2.470.0",
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "rc-progress": "^2.3.0",
     "react": "^16.8.6",
+    "react-circular-progressbar": "^2.0.1",
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
@@ -11,7 +18,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -27,5 +35,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "electron": "^5.0.2",
+    "wait-on": "^3.2.0"
   }
 }
